--- a/client/src/main/webapp/pages/index.html
+++ b/client/src/main/webapp/pages/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>CodeOnline Test</title>
-        <link rel="stylesheet" href="../../../../../js/target/download/codemirror.css">
-        <link rel="stylesheet" href="../../../../../js/target/download/show-hint.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.css">
     </head>
     <body>
         <h1>First code snippet</h1>
@@ -23,9 +23,9 @@
                 }
             }
         </textarea>
-        <script src="../../../../../js/target/download/codemirror.js"></script>
-        <script src="../../../../../js/target/download/show-hint.js"></script>
-        <script src="../../../../../js/target/download/clike.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/mode/clike/clike.js"></script>
         <!-- ${browser.bootstrap} -->
     </body>
 </html>
