--- a/client/src/main/webapp/pages/index.html
+++ b/client/src/main/webapp/pages/index.html
@@ -5,6 +5,7 @@
         <title>CodeOnline Test</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.css">
+        <link rel="stylesheet" href="hints.css">
         <style>
             .codeonline-error {border-bottom: dotted 2px red}
             .codeonline-warning {background-color: yellow}
