--- a/client/src/main/webapp/pages/index.html
+++ b/client/src/main/webapp/pages/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>CodeOnline Test</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.css">
+        <link rel="stylesheet" href="codemirror.css">
+        <link rel="stylesheet" href="show-hint.css">
         <link rel="stylesheet" href="codeonline.css">
         <style>
             .codeonline-error {border-bottom: dotted 2px red}
@@ -39,9 +39,9 @@
                 }
             </pre>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/mode/clike/clike.js"></script>
+        <script src="codemirror.js"></script>
+        <script src="show-hint.js"></script>
+        <script src="clike.js"></script>
         <!-- ${browser.bootstrap} -->
     </body>
 </html>
