Added support for bck2brwsr, changed live-doc-ui packaging

--- a/live-doc-test/src/main/html/index.html
+++ b/live-doc-test/src/main/html/index.html
@@ -37,6 +37,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/mode/clike/clike.js"></script>
-        <script src="codeonline-live-doc-ui.js"></script>
+        <script src="codeonline.js"></script>
     </body>
 </html>
