--- a/live-doc-test/src/main/html/index.html
+++ b/live-doc-test/src/main/html/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>CodeOnline Test</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.css">
-        <link rel="stylesheet" href="codeonline-editor.css">
+        <script src="codeonline.js" defer></script>
+        <link rel="stylesheet" href="codeonline.css">
     </head>
     <body>
         <h1>First code snippet</h1>
@@ -34,9 +33,5 @@
                 }
             </pre>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/codemirror.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/addon/hint/show-hint.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.1/mode/clike/clike.js"></script>
-        <script src="codeonline.js"></script>
     </body>
 </html>
